<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="status">Status</string>
    <string name="release_information">Release Information</string>
    <string name="budget">Budget</string>
    <string name="runtime">Runtime</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="realesed">Realesed</string>
    <string name="daftar">Daftar</string>
    <string name="detail">Detail</string>

    <string-array name="title">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bumblebee</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Venom</item>
        <item>Spider-Man: Into the Spider-Verse</item>
    </string-array>

    <string-array name="date">
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>December 15, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
        <item>December 6, 2018</item>
    </string-array>

    <integer-array name="score">
        <item>68</item>
        <item>83</item>
        <item>65</item>
        <item>70</item>
        <item>77</item>
        <item>74</item>
        <item>66</item>
        <item>84</item>
    </integer-array>

    <string-array name="runtime">
        <item>2h 24m</item>
        <item>2h 29m</item>
        <item>1h 54m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>1h 52m</item>
        <item>1h 57m</item>
    </string-array>

    <string-array name="budget">
        <item>$160,000,000.00</item>
        <item>$300,000,000.00</item>
        <item>$135,000,000.00</item>
        <item>-</item>
        <item>$129,000,000.00</item>
        <item>$114,102,821.00</item>
        <item>$116,000,000.00</item>
        <item>$90,000,000.00</item>
    </string-array>

    <string-array name="genre">
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy</item>
        <item>Science Fiction, Action</item>
        <item>Action, Adventure, Animation</item>
    </string-array>

    <string-array name="overview">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne</item>

        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>

        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>

        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>

        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>

        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>

        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>

        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <array name="poster">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_spiderman</item>
    </array>

</resources>
